<resources>
  <string name="address_tips_location_fail">定位失败,请检查是否已打开网络或GPS功能</string>
  <string name="time_format_minute">%d分钟前</string>
  <string name="time_format_hour">%d小时前</string>
  <string name="time_format_just">刚刚</string>
  <string name="gender_male">男</string>
  <string name="gender_female">女</string>
  <string name="gender_secret">保密</string>
  <string name="app_name">鱼知乐</string>
  <string name="back_menu">后退</string>
  <string name="clear_cache">清除缓存</string>
  <string name="weibo_name">动态</string>
  <string name="forum_name">论坛</string>
  <string name="issue_name">专辑</string>
  <string name="event_name">活动</string>
  <string name="group_name">群组</string>
  <string name="news_name">资讯</string>
  <string name="news_image_name">资讯图片</string>
  <string name="message_name">消息中心</string>
  <string name="news_post">资讯投稿</string>
  <string name="post">投稿</string>
  <string name="reply">回复</string>
  <string name="delete">删除</string>
  <string name="border_top">Border Top</string>
  <string name="border_bottom">Border Bottom</string>
  <string name="image_url">Image Url</string>
  <string name="textColor">#5b85bb</string>
  <string name="drawer_open">Open navigation drawer</string>
  <string name="drawer_close">Close navigation drawer</string>
  <string name="action_settings">Settings</string>
  <string name="hello_world">Hello world!</string>
  <string name="title_activity_ashamed_detail">AshamedDetailActivity</string>
  <string name="title_activity_send_comment">SendCommentActivity</string>
  <string name="title_activity_qr_main">qrMainActivity</string>
  <string name="title_activity_capture">CaptureActivity</string>
  <string name="title_activity_call">CallActivity</string>
  <string name="title_activity_img_preview">ImgPreview</string>
  <string name="title_activity_splash">SplashActivity</string>
  <string name="title_activity_photo_browser">图片浏览</string>
  <string name="title_activity_scan_photo">ScanPhotoActivity</string>
  <string name="title_activity_check_in">签到</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="viewpager_indicator">%1$d/%2$d</string>
  <string name="title_activity_forum">Open SNS</string>
  <string name="title_activity_forum_activity2">ForumActivity2</string>
  <string name="title_activity_forum_activity3">ForumActivity3</string>
  <string name="title_activity_post_detaila">PostDetailaActivity</string>
  <string name="title_activity_send_post">SendPostActivity</string>
  <string name="title_activity_send_post2">SendPost2Activity</string>
  <string name="title_activity_land_lord">LandLord</string>
  <string name="lookmore">查看更多回复</string>
  <string name="Complete">成功</string>
  <string name="Error">失败</string>
  <string name="title_activity_parall_header">ParallHeader</string>
  <string name="title_activity_new_main">NewMainActivity</string>
  <string name="title_section1">Section 1</string>
  <string name="title_section2">Section 2</string>
  <string name="title_section3">Section 3</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_example">Example action</string>
  <string name="title_activity_ldrawer">LDrawerActivity</string>
  <string name="load_more">加载中...</string>
  <string name="load_error">加载失败,点击重试</string>
  <string-array name="menu_array">
    <item>Menu 1</item>
    <item>Menu 2</item>
    <item>Menu 3</item>
    <item>Menu 4</item>
  </string-array>
  <string name="dummy_button">Dummy Button</string>
  <string name="dummy_content">dummy_content</string>
  <string name="tab_function">首页</string>
  <string name="tab_news_center">动态</string>
  <string name="tab_smart_service">鱼乐圈</string>
  <string name="tab_gov_affairs">鱼医生</string>
  <string name="tab_setting">发现</string>
  <string name="share_content">恒瑞网络</string>
  <string name="removeItem">删除</string>
  <string name="action_personal">个人中心</string>
  <string name="personal">个人信息</string>
  <string name="message">消息通知</string>
  <string name="collect">我的收藏</string>
  <string name="invite">邀请好友</string>
  <string name="setting">设置</string>
  <string name="feed_back">反馈</string>
  <string name="remenhuati">热门问答</string>
  <string name="zuigaoxuanshang">最高悬赏</string>
  <string name="wodetiwen">我的提问</string>
  <string name="yijiejue">已解决</string>
  <string name="title_discover_select">标记我的位置</string>
  <string name="mode_putong">普通</string>
  <string name="mode_gensui">跟随</string>
  <string name="mode_luopan">罗盘</string>
  <string name="map_zhengchang">正常图</string>
  <string name="map_weixing">卫星图</string>
  <string name="map_traffic">交通图</string>
  <string name="map_heat">热力图</string>
  <string name="prompt_offline">尚未登录</string>
  <string name="feed_btn_retweet">转发</string>
  <string name="forum_detail_label_post">主题\u0020:\u0020</string>
  <string name="forum_detail_label_topic">帖子\u0020:\u0020 </string>
  <string name="forum_detail_label_reply">回复\u0020:\u0020 </string>
  <string name="activity_wenda_my_question_title">我的提问</string>
  <string name="activity_wenda_title_hot">热门问答</string>
  <string name="activity_wenda_title_mon">最高悬赏</string>
  <string name="activity_wenda_title_solution">已解决</string>
  <string name="title_bar_right_btn_write_feed">写动态</string>
  <string name="title_bar_right_btn_refresh">刷新</string>
  <string name="pull_to_refresh_from_top_pull_label">下拉刷新</string>
  <string name="pull_to_refresh_from_top_release_label">释放立即刷新</string>
  <string name="pull_to_refresh_from_top_refreshing_label">刷新中…</string>
  <string name="pull_to_refresh_from_bottom_pull_label">上拉加载</string>
  <string name="pull_to_refresh_from_bottom_release_label">释放立即加载</string>
  <string name="pull_to_refresh_from_bottom_refreshing_label">加载中…</string>
  <string name="pull_to_refresh_slogan_default"></string>
  <string name="label_text_set_award_info">请设置悬赏金额</string>
  <string name="available_wealth_text">您可用的财富值:%s</string>
  <string name="info_more_award">提高悬赏,更容易吸引高手为您解答</string>
  <string name="register_input_password_hint">请输入6到12个数字、字母或符号组成的密码</string>
  <string name="register_input_password_again_hint">再输一遍密码</string>
  <string name="register_input_nickname_hint">请设置您的昵称(少于5个字符,不含特殊字符)</string>
  <string name="network_not_normal">网络不给力</string>
  <string name="http_server_error">无法连接到服务器,请稍后再试</string>
  <string name="server_error">服务器错误</string>
  <string name="session_expired">Session过期,请重新登录</string>
  <string name="activity_send_tiezi_title"></string>
  <string name="activity_zhuanji_title">视频</string>
  <string name="upgrade_info_normal">有新的版本更新，是否下载?</string>
  <string name="upgrade_info_no_new_version">当前已是最新版本</string>
  <string name="check_upgrade_failed">检测更新失败</string>
  <string name="btn_confirm">确定</string>
  <string name="btn_cancel">取消</string>
  <string name="activity_group_info_title">群组</string>
  <string name="activity_group_info_label_topic">组内近期话题:</string>
  <string name="activity_group_info_default_text_not_topic">该小组的成员都在睡觉,\n暂无话题哦~</string>
  <string name="activity_group_info_text_creator">组长 : %s</string>
  <string name="activity_group_info_text_create_time">成立于 : %s</string>
  <string name="activity_group_info_right_title">发话题</string>
  <string name="activity_group_info_member_count">%s个小组成员</string>
  <string name="activity_profile_setting_title">个人信息</string>
  <string name="activity_profile_setting_label_avatar">头像</string>
  <string name="activity_profile_setting_label_nick_name">昵称</string>
  <string name="activity_profile_setting_label_gender">性别</string>
  <string name="activity_profile_setting_label_area">地区</string>
  <string name="activity_profile_setting_label_birthday">出生年月</string>
  <string name="activity_profile_setting_label_signature">个性签名</string>
  <string name="activity_profile_setting_label_qq">QQ</string>
  <string name="activity_profile_setting_label_email">邮箱</string>
  <string name="activity_profile_setting_label_register_time">注册时间</string>
  <string name="activity_profile_setting_label_score">鱼乐豆</string>
  <string name="activity_profile_setting_btn_logout">退出登录</string>
  <string name="activity_profile_setting_default_value">未填</string>
  <string name="activity_profile_setting_signature_hint">个性签名最大长度为%d个字符</string>
  <string name="activity_profile_myself">我的主页</string>
  <string name="activity_profile_label_fans">粉丝: </string>
  <string name="activity_profile_label_follow">关注: </string>
  <string name="activity_profile_label_area">地区</string>
  <string name="activity_profile_label_signature">个性签名</string>
  <string name="activity_profile_label_location">我的位置</string>
  <string name="activity_profile_label_message">消息</string>
  <string name="activity_profile_label_collect">收藏</string>
  <string name="activity_profile_label_invite_friend">邀请好友</string>
  <string name="activity_profile_label_setting">设置</string>
  <string name="activity_profile_enter_map">进入地图</string>
  <string name="activity_profile_title_right_btn">编辑资料</string>
  <string name="activity_other_profile_title">他的主页</string>
  <string name="activity_other_profile_btn_follow">加关注</string>
  <string name="activity_other_profile_btn_cancel_follow">取消关注</string>
  <string name="activity_other_profile_label_location">他的位置</string>
  <string name="activity_other_profile_label_question">他的问答</string>
  <string name="activity_other_profile_label_trends">他的动态</string>
  <string name="activity_other_profile_label_topic">他的话题</string>
  <string name="activity_other_profile_label_group">他加入的小组</string>
  <string name="activity_group_info_label_notice">公告</string>
  <string name="activity_group_info_btn_notice_expand">更多</string>
  <string name="activity_group_info_btn_notice_fold">收起</string>
  <string name="share_error_web_chat_not_install">请确认微信已安装</string>
  <string name="share_error_qq_not_install">请确认QQ已安装</string>
  <string name="share_error_sina_not_install">请确认新浪微博已安装</string>
  <string name="activity_my_collection_title">我的收藏</string>
  <string name="question_status_un_resolved">未解决</string>
  <string name="question_status_resolved">已解决</string>
  <string name="activity_other_group_list_title">他加入的群组</string>
  <string name="activity_other_group_member_count">%s个成员</string>
  <string name="activity_fans_title_mine">我的粉丝</string>
  <string name="activity_follows_title_mine">我的关注</string>
  <string name="activity_fans_title_other">他的粉丝</string>
  <string name="activity_follows_title_other">他的关注</string>
  <string name="activity_other_post_title">他的话题</string>
  <string name="activity_my_message_title">我的消息</string>
  <string name="activity_my_message_empty_info">这里太安静了哦</string>
  <string name="unit_one">个</string>
  <string name="fragment_my_group_label_topic_count">已发表话题数</string>
  <string name="fragment_my_group_label_create_group">创建小组</string>
  <string name="fragment_my_group_label_topic">话题</string>
  <string name="fragment_my_group_label_member">成员</string>
  <string name="fragment_my_group_category_create">已创建的小组</string>
  <string name="fragment_my_group_category_join">已加入的小组</string>
  <string name="question_list_title_hot">热门问答</string>
  <string name="question_list_title_max_award">最高悬赏</string>
  <string name="question_list_title_solution">已解决</string>
  <string name="question_list_title_mine">我的问答</string>
  <string name="question_list_title_bar_btn_ask">提问</string>
  <string name="fish_category_hongyu">魟鱼</string>
  <string name="fish_category_longyu">龙鱼</string>
  <string name="fish_category_huyu">虎鱼</string>
  <string name="fish_category_qicaishenxian">七彩神仙</string>
  <string name="fish_category_other">其它鱼类</string>
  <string name="activity_create_group_label_logo">小组形象</string>
  <string name="activity_create_group_label_name">名称</string>
  <string name="activity_create_group_label_category">小组标签</string>
  <string name="activity_create_group_label_type">小组类型</string>
  <string name="activity_create_group_label_description">小组简介</string>
</resources>