<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:id="@+id/HomeGroup"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <com.thinksky.ui.common.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        />


    <RadioGroup
        android:id="@+id/main_radio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:checkedButton="@+id/rb_shouye"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

      <RadioButton
          android:id="@+id/rb_shouye"
          android:checked="false"
          android:drawableTop="@drawable/home_progress"
          android:text="@string/tab_function"
          android:textColor="@color/tab_text_color"
          style="@style/main_tab_bottom"
          />

      <RadioButton
          android:id="@+id/rb_weibo"
          android:drawableTop="@drawable/dongtai_progress"
          android:text="@string/tab_news_center"
          android:textColor="@color/tab_text_color"
          style="@style/main_tab_bottom"
          />
      <RadioButton
          android:id="@+id/rb_mall"
          android:drawableTop="@drawable/mall_progress"
          android:text="@string/tab_setting"
          android:textColor="@color/tab_text_color"
          style="@style/main_tab_bottom"
          />
      <RadioButton
          android:id="@+id/rb_yulequan"
          android:drawableTop="@drawable/ylq_progress"
          android:text="@string/tab_smart_service"
          android:textColor="@color/tab_text_color"
          style="@style/main_tab_bottom"
          />

      <RadioButton
          android:id="@+id/rb_yuyisheng"
          android:checked="false"
          android:drawableTop="@drawable/yys_progress"
          android:text="@string/tab_gov_affairs"
          android:textColor="@color/tab_text_color"
          style="@style/main_tab_bottom"
          />


    </RadioGroup>
  </LinearLayout>

  <LinearLayout
      android:id="@+id/drawer_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="start"

      android:orientation="vertical"
      >

    <include layout="@layout/left_view_layout"/>
  </LinearLayout>

</android.support.v4.widget.DrawerLayout>
