<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
  <com.thinksky.ui.common.TitleBar
      android:id="@+id/title_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />
  <RelativeLayout
      android:id="@+id/menu_logo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/ProfileMenuContainer"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_group_label_logo"
        style="@style/Widget.App.TextView.Large.Primary.ProfileMenu"
        />
    <TextView
        android:id="@+id/avatar_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.App.TextView.Small.Secondary.ProfileDetailArrow"
        />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_toLeftOf="@id/avatar_arrow"
        />

  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:background="@color/item_divider"
      />
  <RelativeLayout
      android:id="@+id/menu_group_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/ProfileMenuContainer"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_group_label_name"
        style="@style/Widget.App.TextView.Large.Primary.ProfileMenu"
        />

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.App.TextView.Small.Secondary.ProfileDetailArrow"
        />
  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:background="@color/item_divider"
      />

  <RelativeLayout
      android:id="@+id/menu_group_category"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/ProfileMenuContainer"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_group_label_category"
        style="@style/Widget.App.TextView.Large.Primary.ProfileMenu"
        />

    <TextView
        android:id="@+id/group_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.App.TextView.Small.Secondary.ProfileDetailArrow"
        />
  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:background="@color/item_divider"
      />

  <RelativeLayout
      android:id="@+id/menu_group_type"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/ProfileMenuContainer"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_group_label_type"
        style="@style/Widget.App.TextView.Large.Primary.ProfileMenu"
        />

    <TextView
        android:id="@+id/group_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.App.TextView.Small.Secondary.ProfileDetailArrow"
        />
  </RelativeLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:background="@color/item_divider"
      />
  <RelativeLayout
      android:id="@+id/menu_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/ProfileMenuContainer"
      >
    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_group_label_description"
        style="@style/Widget.App.TextView.Large.Primary.ProfileMenu"
        />
    <TextView
        android:id="@+id/description_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.App.TextView.Small.Secondary.ProfileDetailArrow"
        />
    <ImageView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_toLeftOf="@id/description_arrow"
        android:layout_toRightOf="@id/description_label"
        />

  </RelativeLayout>

</LinearLayout>