<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical"
    >

  <LinearLayout
      android:id="@+id/mygroup"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@android:color/white"
      android:orientation="vertical"
      tools:visibility="visible"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_large"
        >

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            >
          <TextView
              android:id="@+id/topic_count"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              tools:text="10"
              style="@style/Widget.App.TextView.Large.RedDark"
              />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/unit_one"
              style="@style/Widget.App.TextView.Small.Primary"
              />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_smallest"
            android:drawableLeft="@drawable/icon_topic_my_group"
            android:gravity="center"
            android:text="@string/fragment_my_group_label_topic_count"
            style="@style/Widget.App.TextView.Medium.Secondary"
            />
      </LinearLayout>

      <View
          android:layout_width="1dp"
          android:layout_height="match_parent"
          android:layout_marginBottom="5dp"
          android:layout_marginTop="5dp"
          android:background="@color/default_divider_color"
          />

      <TextView
          android:id="@+id/create_group"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:drawablePadding="@dimen/margin_smallest"
          android:drawableTop="@drawable/icon_create_group"
          android:gravity="center"
          android:text="@string/fragment_my_group_label_create_group"
          style="@style/Widget.App.TextView.Medium.Secondary"
          />
    </LinearLayout>
    <ExpandableListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:childDivider="@color/item_divider"
        android:childIndicator="@null"
        android:divider="@color/item_divider"
        android:dividerHeight="0.5dp"
        android:groupIndicator="@null"
        android:listSelector="@android:color/transparent"
        />
  </LinearLayout>
</RelativeLayout>



